NetBSD Problem Report #50869

From www@NetBSD.org  Mon Feb 29 17:36:00 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 1BF1D7ABE8
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 29 Feb 2016 17:36:00 +0000 (UTC)
Message-Id: <20160229173559.4CEF47ACBB@mollari.NetBSD.org>
Date: Mon, 29 Feb 2016 17:35:59 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/arch/evbmips/loongson/dev/stvii.c:309: weird coding ?
X-Send-Pr-Version: www-1.0

>Number:         50869
>Category:       port-evbmips
>Synopsis:       src/sys/arch/evbmips/loongson/dev/stvii.c:309: weird coding ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    port-evbmips-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Feb 29 17:40:00 +0000 2016
>Closed-Date:    Mon Feb 29 20:41:36 +0000 2016
>Last-Modified:  Mon Feb 29 20:41:36 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160229
>Organization:
>Environment:
>Description:

src/sys/arch/evbmips/loongson/dev/stvii.c:309]: (style) Boolean result is used in bitwise operation. Clarify expression with parentheses.


Source code is

            if (charging & (bl > BAT_FULL)) {
                /* stop charging, we're full */
                charging = 0;
            } else if (!charging & (bl < BAT_LOW)) {
                charging = 1;
            }

Looks weird. Did someone muxup & and && ?

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50869 CVS commit: src/sys/arch/evbmips/loongson/dev
Date: Mon, 29 Feb 2016 13:24:31 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Mon Feb 29 18:24:31 UTC 2016

 Modified Files:
 	src/sys/arch/evbmips/loongson/dev: stvii.c

 Log Message:
 PR/50869: David Binderman: Use logical and instead of arithmetic


 To generate a diff of this commit:
 cvs rdiff -u -r1.4 -r1.5 src/sys/arch/evbmips/loongson/dev/stvii.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Mon, 29 Feb 2016 20:41:36 +0000
State-Changed-Why:
Fixed by christos, thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.