PR/50869: David Binderman: Use logical and instead of arithmetic